fix overlay issues on mobile

--- a/static/styles.css
+++ b/static/styles.css
@@ -14,5 +14,5 @@ body
     bottom: 0;
     background-color: rgba(0,0,0,0.5); /* Black background with opacity */
     z-index: 2; /* Specify a stack order in case you're using a different order for other elements */
-    cursor: pointer; /* Add a pointer on hover */
+    touch-action: none;
   }
